@@ -17,7 +17,6 @@
  */
 package org.jackhuang.hmcl.ui.versions;
 
-import com.github.steveice10.opennbt.tag.builtin.*;
 import com.jfoenix.controls.JFXButton;
 import com.jfoenix.controls.JFXTextField;
 import javafx.beans.property.SimpleBooleanProperty;
@@ -34,9 +33,8 @@ import javafx.scene.layout.HBox;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import javafx.stage.FileChooser;
+import org.glavo.nbt.tag.*;
 import org.jackhuang.hmcl.game.World;
-import org.jackhuang.hmcl.task.Schedulers;
-import org.jackhuang.hmcl.task.Task;
 import org.jackhuang.hmcl.ui.Controllers;
 import org.jackhuang.hmcl.ui.FXUtils;
 import org.jackhuang.hmcl.ui.SVG;
@@ -66,7 +64,8 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
     private final WorldManagePage worldManagePage;
     private boolean isReadOnly;
     private final World world;
-    private CompoundTag levelDat;
+    private CompoundTag levelData;
+    private CompoundTag playerData;
 
     private final ImageContainer iconImageView = new ImageContainer(32);
 
@@ -76,15 +75,9 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
         refresh();
     }
 
-    private CompoundTag loadWorldInfo() throws IOException {
-        if (!Files.isDirectory(world.getFile()))
-            throw new IOException("Not a valid world directory");
-
-        return world.getLevelData();
-    }
-
     private void updateControls() {
-        CompoundTag dataTag = levelDat.get("Data");
+        CompoundTag dataTag = (CompoundTag) levelData.get("Data");
+        CompoundTag playerTag = playerData;
 
         ScrollPane scrollPane = new ScrollPane();
         scrollPane.setFitToHeight(true);
@@ -107,7 +100,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                 setRightTextField(worldNamePane, worldNameField, 200);
 
                 if (dataTag.get("LevelName") instanceof StringTag worldNameTag) {
-                    var worldName = new SimpleStringProperty(worldNameTag.getValue());
+                    var worldName = new SimpleStringProperty(worldNameTag.get());
                     FXUtils.bindString(worldNameField, worldName);
                     worldNameField.getProperties().put(WorldInfoPage.class.getName() + ".worldNameProperty", worldName);
                     worldName.addListener((observable, oldValue, newValue) -> {
@@ -205,12 +198,14 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                 worldSpawnPoint.setTitle(i18n("world.info.spawn"));
 
                 String value;
+                // Valid after 1.21.9-pre1
                 if (dataTag.get("spawn") instanceof CompoundTag spawnTag && spawnTag.get("pos") instanceof IntArrayTag posTag) {
-                    value = Dimension.of(spawnTag.get("dimension") instanceof StringTag dimensionTag
-                                    ? dimensionTag
-                                    : new StringTag("SpawnDimension", "minecraft:overworld"))
-                            .formatPosition(posTag);
-                } else if (dataTag.get("SpawnX") instanceof IntTag intX
+                    value = (spawnTag.get("dimension") instanceof StringTag dimensionTag)
+                            ? Dimension.of(dimensionTag).formatPosition(posTag)
+                            : Dimension.OVERWORLD.formatPosition(posTag);
+                }
+                // Valid before 1.21.9-pre1
+                else if (dataTag.get("SpawnX") instanceof IntTag intX
                         && dataTag.get("SpawnY") instanceof IntTag intY
                         && dataTag.get("SpawnZ") instanceof IntTag intZ) {
                     value = Dimension.OVERWORLD.formatPosition(intX.getValue(), intY.getValue(), intZ.getValue());
@@ -248,34 +243,51 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
             {
                 generateFeaturesButton.setTitle(i18n("world.info.generate_features"));
                 generateFeaturesButton.setDisable(isReadOnly);
-
-                // generate_features was valid after 20w20a and MapFeatures was before that
-                if (dataTag.get("WorldGenSettings") instanceof CompoundTag worldGenSettings) {
-                    bindTagAndToggleButton(worldGenSettings.get("generate_features"), generateFeaturesButton);
+                // Valid before (1.16)20w20a
+                if (dataTag.get("MapFeatures") instanceof ByteTag generateFeaturesTag) {
+                    bindTagAndToggleButton(generateFeaturesTag, generateFeaturesButton);
+                }
+                // Valid after (1.16)20w20a
+                else if (world.getNormalizedWorldGenSettingsData() != null) {
+                    CompoundTag unifiedWorldGenSettingsDataTag = world.getNormalizedWorldGenSettingsData();
+                    Tag tag = unifiedWorldGenSettingsDataTag.get("generate_features"); // Valid between (1.16)20w20a and 26.1-snapshot-6
+                    if (tag == null)
+                        tag = unifiedWorldGenSettingsDataTag.get("generate_structures"); // Valid after 26.1-snapshot-6
+                    bindTagAndToggleButton(tag, generateFeaturesButton);
                 } else {
-                    bindTagAndToggleButton(dataTag.get("MapFeatures"), generateFeaturesButton);
+                    generateFeaturesButton.setDisable(true);
                 }
             }
 
             var difficultyButton = new LineSelectButton<Difficulty>();
             {
                 difficultyButton.setTitle(i18n("world.info.difficulty"));
-                difficultyButton.setDisable(worldManagePage.isReadOnly());
+                difficultyButton.setDisable(isReadOnly);
                 difficultyButton.setItems(Difficulty.items);
 
-                if (dataTag.get("Difficulty") instanceof ByteTag difficultyTag) {
-                    Difficulty difficulty = Difficulty.of(difficultyTag.getValue());
-                    if (difficulty != null) {
-                        difficultyButton.setValue(difficulty);
-                        difficultyButton.valueProperty().addListener((o, oldValue, newValue) -> {
-                            if (newValue != null) {
-                                difficultyTag.setValue((byte) newValue.ordinal());
-                                saveLevelDat();
-                            }
-                        });
-                    } else {
-                        difficultyButton.setDisable(true);
-                    }
+                Difficulty difficulty;
+                // Valid before 26.1-snapshot-6
+                if (dataTag.get("Difficulty") instanceof ByteTag difficultyTag
+                        && (difficulty = Difficulty.of(difficultyTag.getValue())) != null) {
+                    difficultyButton.setValue(difficulty);
+                    difficultyButton.valueProperty().addListener((o, oldValue, newValue) -> {
+                        if (newValue != null) {
+                            difficultyTag.setValue((byte) newValue.ordinal());
+                            saveWorldData();
+                        }
+                    });
+                }
+                // Valid after 26.1-snapshot-6
+                else if (dataTag.get("difficulty_settings") instanceof CompoundTag difficultySettingTag
+                        && difficultySettingTag.get("difficulty") instanceof StringTag difficultyTag
+                        && (difficulty = Difficulty.of(difficultyTag.getValue())) != null) {
+                    difficultyButton.setValue(difficulty);
+                    difficultyButton.valueProperty().addListener((o, oldValue, newValue) -> {
+                        if (newValue != null) {
+                            difficultyTag.setValue(newValue.getTagStringValue());
+                            saveWorldData();
+                        }
+                    });
                 } else {
                     difficultyButton.setDisable(true);
                 }
@@ -285,8 +297,17 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
             {
                 difficultyLockPane.setTitle(i18n("world.info.difficulty_lock"));
                 difficultyLockPane.setDisable(isReadOnly);
-
-                bindTagAndToggleButton(dataTag.get("DifficultyLocked"), difficultyLockPane);
+                // Valid before 26.1-snapshot-6
+                if (dataTag.get("DifficultyLocked") instanceof ByteTag difficultyLockedTag) {
+                    bindTagAndToggleButton(difficultyLockedTag, difficultyLockPane);
+                }
+                // Valid after 26.1-snapshot-6
+                else if (dataTag.get("difficulty_settings") instanceof CompoundTag difficultySettingTag
+                        && difficultySettingTag.get("locked") instanceof ByteTag lockedTag) {
+                    bindTagAndToggleButton(lockedTag, difficultyLockPane);
+                } else {
+                    difficultyLockPane.setDisable(true);
+                }
             }
 
             worldInfo.getContent().setAll(
@@ -296,14 +317,14 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
             rootPane.getChildren().addAll(ComponentList.createComponentListTitle(i18n("world.info")), worldInfo);
         }
 
-        if (dataTag.get("Player") instanceof CompoundTag playerTag) {
+        if (playerTag != null) {
             ComponentList playerInfo = new ComponentList();
 
             var locationPane = new LineTextPane();
             {
                 locationPane.setTitle(i18n("world.info.player.location"));
                 Dimension dimension = Dimension.of(playerTag.get("Dimension"));
-                if (dimension != null && playerTag.get("Pos") instanceof ListTag posTag) {
+                if (dimension != null && playerTag.get("Pos") instanceof ListTag<?> posTag) {
                     locationPane.setText(dimension.formatPosition(posTag));
                 }
             }
@@ -326,7 +347,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                 if (playerTag.get("respawn") instanceof CompoundTag respawnTag
                         && respawnTag.get("dimension") instanceof StringTag dimensionTag
                         && respawnTag.get("pos") instanceof IntArrayTag intArrayTag
-                        && intArrayTag.length() >= 3) { // Valid after 25w07a
+                        && intArrayTag.size() >= 3) { // Valid after 25w07a
                     spawnPane.setText(Dimension.of(dimensionTag).formatPosition(intArrayTag));
                 } else if (playerTag.get("SpawnX") instanceof IntTag intX
                         && playerTag.get("SpawnY") instanceof IntTag intY
@@ -343,8 +364,14 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                 playerGameTypePane.setDisable(worldManagePage.isReadOnly());
                 playerGameTypePane.setItems(GameType.items);
 
-                if (playerTag.get("playerGameType") instanceof IntTag playerGameTypeTag
-                        && dataTag.get("hardcore") instanceof ByteTag hardcoreTag) {
+                // Valid before 26.1-snapshot-6
+                Tag rawHardcoreTag = dataTag.get("hardcore");
+                // Valid after 26.1-snapshot-6
+                if (rawHardcoreTag == null && dataTag.get("difficulty_settings") instanceof CompoundTag difficultySettingsTag) {
+                    rawHardcoreTag = difficultySettingsTag.get("hardcore");
+                }
+
+                if (playerTag.get("playerGameType") instanceof IntTag playerGameTypeTag && rawHardcoreTag instanceof ByteTag hardcoreTag) {
                     boolean isHardcore = hardcoreTag.getValue() == 1;
                     GameType gameType = GameType.of(playerGameTypeTag.getValue(), isHardcore);
                     if (gameType != null) {
@@ -358,7 +385,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                                     playerGameTypeTag.setValue(newValue.ordinal());
                                     hardcoreTag.setValue((byte) 0);
                                 }
-                                saveLevelDat();
+                                saveWorldData();
                             }
                         });
                     } else {
@@ -428,10 +455,10 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                 toggleButton.selectedProperty().addListener((o, oldValue, newValue) -> {
                     try {
                         byteTag.setValue((byte) (newValue ? 1 : 0));
-                        saveLevelDat();
+                        saveWorldData();
                     } catch (Exception e) {
                         toggleButton.setSelected(oldValue);
-                        LOG.warning("Exception happened when saving level.dat", e);
+                        LOG.warning("Exception happened when saving world info", e);
                     }
                 });
             } else {
@@ -451,11 +478,11 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                     Integer integer = Lang.toIntOrNull(newValue);
                     if (integer != null) {
                         intTag.setValue(integer);
-                        saveLevelDat();
+                        saveWorldData();
                     }
                 } catch (Exception e) {
                     jfxTextField.setText(oldValue);
-                    LOG.warning("Exception happened when saving level.dat", e);
+                    LOG.warning("Exception happened when saving world data", e);
                 }
             }
         });
@@ -472,11 +499,11 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                     Float floatValue = Lang.toFloatOrNull(newValue);
                     if (floatValue != null) {
                         floatTag.setValue(floatValue);
-                        saveLevelDat();
+                        saveWorldData();
                     }
                 } catch (Exception e) {
                     jfxTextField.setText(oldValue);
-                    LOG.warning("Exception happened when saving level.dat", e);
+                    LOG.warning("Exception happened when saving world data", e);
                 }
             }
         });
@@ -484,30 +511,27 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
         jfxTextField.setValidators(new DoubleValidator(i18n("input.number"), true));
     }
 
-    private void saveLevelDat() {
-        LOG.info("Saving level.dat of world " + world.getWorldName());
+    private void saveWorldData() {
+        LOG.info("Saving data of world " + world.getWorldName());
         try {
-            this.world.writeLevelDat(levelDat);
+            this.world.writeWorldData();
         } catch (IOException e) {
-            LOG.warning("Failed to save level.dat of world " + world.getWorldName(), e);
+            LOG.warning("Failed to save world data", e);
         }
     }
 
     @Override
     public void refresh() {
-        this.isReadOnly = worldManagePage.isReadOnly();
-        this.setLoading(true);
-        Task.supplyAsync(this::loadWorldInfo)
-                .whenComplete(Schedulers.javafx(), ((result, exception) -> {
-                    if (exception == null) {
-                        this.levelDat = result;
-                        updateControls();
-                        setLoading(false);
-                    } else {
-                        LOG.warning("Failed to load level.dat", exception);
-                        setFailedReason(i18n("world.info.failed"));
-                    }
-                })).start();
+        setFailedReason(null);
+        try {
+            this.isReadOnly = worldManagePage.isReadOnly();
+            this.levelData = world.getLevelData();
+            this.playerData = world.getPlayerData();
+            updateControls();
+        } catch (Exception e) {
+            LOG.warning("Failed to refresh world info", e);
+            setFailedReason(i18n("world.info.failed"));
+        }
     }
 
     private record Dimension(String name) {
@@ -517,7 +541,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
 
         static Dimension of(Tag tag) {
             if (tag instanceof IntTag intTag) {
-                return switch (intTag.getValue()) {
+                return switch (intTag.get()) {
                     case 0 -> OVERWORLD;
                     case -1 -> THE_NETHER;
                     case 1 -> THE_END;
@@ -537,30 +561,23 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
         }
 
         String formatPosition(Tag tag) {
-            if (tag instanceof ListTag listTag && listTag.size() == 3) {
+            if (tag instanceof ListTag<?> listTag && listTag.size() == 3) {
 
-                Tag x = listTag.get(0);
-                Tag y = listTag.get(1);
-                Tag z = listTag.get(2);
-
-                if (x instanceof DoubleTag && y instanceof DoubleTag && z instanceof DoubleTag) {
-                    return this == OVERWORLD
-                            ? String.format("(%.2f, %.2f, %.2f)", x.getValue(), y.getValue(), z.getValue())
-                            : String.format("%s (%.2f, %.2f, %.2f)", name, x.getValue(), y.getValue(), z.getValue());
+                if (listTag.getTag(0) instanceof DoubleTag x
+                        && listTag.getTag(1) instanceof DoubleTag y
+                        && listTag.getTag(2) instanceof DoubleTag z) {
+                    return formatPosition(x.get(), y.get(), z.get());
                 }
 
                 return null;
             }
 
             if (tag instanceof IntArrayTag intArrayTag) {
+                int x = intArrayTag.get(0);
+                int y = intArrayTag.get(1);
+                int z = intArrayTag.get(2);
 
-                int x = intArrayTag.getValue(0);
-                int y = intArrayTag.getValue(1);
-                int z = intArrayTag.getValue(2);
-
-                return this == OVERWORLD
-                        ? String.format("(%d, %d, %d)", x, y, z)
-                        : String.format("%s (%d, %d, %d)", name, x, y, z);
+                return formatPosition(x, y, z);
             }
 
             return null;
@@ -568,14 +585,14 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
 
         String formatPosition(int x, int y, int z) {
             return this == OVERWORLD
-                    ? String.format("(%d, %d, %d)", x, y, z)
-                    : String.format("%s (%d, %d, %d)", name, x, y, z);
+                    ? "(%d, %d, %d)".formatted(x, y, z)
+                    : "%s (%d, %d, %d)".formatted(name, x, y, z);
         }
 
         String formatPosition(double x, double y, double z) {
             return this == OVERWORLD
-                    ? String.format("(%.2f, %.2f, %.2f)", x, y, z)
-                    : String.format("%s (%.2f, %.2f, %.2f)", name, x, y, z);
+                    ? "(%.2f, %.2f, %.2f)".formatted(x, y, z)
+                    : "%s (%.2f, %.2f, %.2f)".formatted(name, x, y, z);
         }
     }
 
@@ -586,6 +603,15 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
 
         static Difficulty of(int d) {
             return (d >= 0 && d < items.size()) ? items.get(d) : null;
+        }
+
+        static Difficulty of(String name) {
+            for (Difficulty d : items) if (d.name().toLowerCase(Locale.ROOT).equals(name)) return d;
+            return null;
+        }
+
+        String getTagStringValue() {
+            return this.name().toLowerCase(Locale.ROOT);
         }
 
         @Override
@@ -653,7 +679,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
             Files.deleteIfExists(output);
             iconImageView.setImage(FXUtils.newBuiltinImage("/assets/img/unknown_server.png"));
         } catch (IOException e) {
-            LOG.warning("Failed to delete world icon " + e.getMessage());
+            LOG.warning("Failed to delete world icon ", e);
         }
     }
 }
